clusters/home/default/synapse/80-static.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delegation-nginx
  namespace: default
spec:
  selector:
    matchLabels:
      app: delegation-nginx
  template:
    metadata:
      labels:
        app: delegation-nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: conf
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf

      volumes:
      - name: conf
        secret:
          secretName: synapse-delegation-nginx-config
          items:
          - key: default.conf
            path: default.conf
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: delegation-nginx
  namespace: default
  name: delegation-service
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: delegation-nginx
  type: ClusterIP
