clusters/home/default/synapse/99-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: synapse-service
  namespace: default
  labels:
    app: synapse
spec:
  selector:
    app: synapse
  ports:
    - name: panel
      protocol: TCP
      port: 80
      targetPort: 8008
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: synapse-deployment
  namespace: default
  labels:
    app: synapse
spec:
  serviceName: synapse-service
  selector:
    matchLabels:
      app: synapse
  template:
    metadata:
      labels:
        app: synapse
    spec:
      nodeSelector:
        kubernetes.io/hostname: raspberrypi-server
      containers:
      - image: matrixdotorg/synapse:v1.94.0
        name: synapse
        volumeMounts:
        - name: synapse-config
          mountPath: /etc/synapse
        - name: datadir
          mountPath: /DATADIR
        - name: logdir
          mountPath: /var/log/synapse
        ports:
          - containerPort: 8008
      volumes:
      - name: datadir
        hostPath:
          path: /mnt/shared_data/k8s/synapse/data
      - name: logdir
        hostPath:
          path: /mnt/shared_data/k8s/synapse/log
      - name: synapse-config
        secret:
          secretName: synapse-config
